web-infras/parser/tests/fixtures/self-added/let-as-identifier/strict-mode/let-as-value-in-pattern-2/output.txt
[SyntaxError]: unexpect keyword in strict mode (2,8)
2|var {a:let} = {}
 |      ^
